antlr_output/OnyxParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\projects\\workspace\\onyx\\Onyx.g 2011-04-20 15:53:14

package com.cboe.onyx;
import com.cboe.onyx.verb.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class OnyxParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCEPT", "CANCEL", "CONNECT", "CREATE", "GET", "LOGIN", "LOGOUT", "REPLACE", "SELECT", "SEND", "SUBSCRIBE", "WAIT", "CAS", "DURATION", "HOSTNAME", "BOOK", "CURRENT_MARKET", "FILENAME", "FIRM", "KEY", "MARKET_DATA", "MESSAGE", "NAME", "NBBO", "OPTION", "ORDER", "ORDER_HISTORY", "PASSWORD", "PREFERENCES", "PRICE", "PRODUCT", "PRODUCTS", "PRODUCT_CLASS", "PRODUCT_CLASSES", "PRODUCT_TYPE", "PRODUCT_TYPES", "QUOTE", "RECAP", "RFQ", "ROLE", "SESSION", "SESSIONS", "SIDE", "STRATEGY", "SYMBOL", "TICKER", "TIME", "TRADER_PRODUCT_HISTORY", "USERNAME", "USER_MARKET", "RANDOM", "NEW", "BY", "FOR", "FROM", "OF", "TO", "AND", "OR", "WHERE", "COMMENT", "NEWLINE", "WS", "QVALUE", "FILE", "'='"
    };
    public static final int EOF=-1;
    public static final int T__69=69;
    public static final int ACCEPT=4;
    public static final int CANCEL=5;
    public static final int CONNECT=6;
    public static final int CREATE=7;
    public static final int GET=8;
    public static final int LOGIN=9;
    public static final int LOGOUT=10;
    public static final int REPLACE=11;
    public static final int SELECT=12;
    public static final int SEND=13;
    public static final int SUBSCRIBE=14;
    public static final int WAIT=15;
    public static final int CAS=16;
    public static final int DURATION=17;
    public static final int HOSTNAME=18;
    public static final int BOOK=19;
    public static final int CURRENT_MARKET=20;
    public static final int FILENAME=21;
    public static final int FIRM=22;
    public static final int KEY=23;
    public static final int MARKET_DATA=24;
    public static final int MESSAGE=25;
    public static final int NAME=26;
    public static final int NBBO=27;
    public static final int OPTION=28;
    public static final int ORDER=29;
    public static final int ORDER_HISTORY=30;
    public static final int PASSWORD=31;
    public static final int PREFERENCES=32;
    public static final int PRICE=33;
    public static final int PRODUCT=34;
    public static final int PRODUCTS=35;
    public static final int PRODUCT_CLASS=36;
    public static final int PRODUCT_CLASSES=37;
    public static final int PRODUCT_TYPE=38;
    public static final int PRODUCT_TYPES=39;
    public static final int QUOTE=40;
    public static final int RECAP=41;
    public static final int RFQ=42;
    public static final int ROLE=43;
    public static final int SESSION=44;
    public static final int SESSIONS=45;
    public static final int SIDE=46;
    public static final int STRATEGY=47;
    public static final int SYMBOL=48;
    public static final int TICKER=49;
    public static final int TIME=50;
    public static final int TRADER_PRODUCT_HISTORY=51;
    public static final int USERNAME=52;
    public static final int USER_MARKET=53;
    public static final int RANDOM=54;
    public static final int NEW=55;
    public static final int BY=56;
    public static final int FOR=57;
    public static final int FROM=58;
    public static final int OF=59;
    public static final int TO=60;
    public static final int AND=61;
    public static final int OR=62;
    public static final int WHERE=63;
    public static final int COMMENT=64;
    public static final int NEWLINE=65;
    public static final int WS=66;
    public static final int QVALUE=67;
    public static final int FILE=68;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "whereClause", "nounAdjectivesPhrase", "conjunction", 
        "sentence", "keyVal", "verb", "noun", "directObjectPhrase", "preposition", 
        "command", "adjective", "comment", "nounPhrase", "prepositionalPhrase"
    };
    public static final boolean[] decisionCanBacktrack = new boolean[] {
        false, // invalid decision
        false, false, false, false, false, false, false, false, false, 
            false, false, false, false, false, false, false, false
    };

     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public OnyxParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public OnyxParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public OnyxParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return OnyxParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\projects\\workspace\\onyx\\Onyx.g"; }


    //private List<Integer[]> sentences;


    public static class command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "command"
    // C:\\projects\\workspace\\onyx\\Onyx.g:93:1: command : ( NEWLINE )* ( sentence | comment ) ( ( NEWLINE )+ ( sentence | comment ) )* ( NEWLINE )* EOF ;
    public final OnyxParser.command_return command() throws RecognitionException {
        OnyxParser.command_return retval = new OnyxParser.command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NEWLINE1=null;
        Token NEWLINE4=null;
        Token NEWLINE7=null;
        Token EOF8=null;
        OnyxParser.sentence_return sentence2 = null;

        OnyxParser.comment_return comment3 = null;

        OnyxParser.sentence_return sentence5 = null;

        OnyxParser.comment_return comment6 = null;


        Object NEWLINE1_tree=null;
        Object NEWLINE4_tree=null;
        Object NEWLINE7_tree=null;
        Object EOF8_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "command");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(93, 1);

        try {
            // C:\\projects\\workspace\\onyx\\Onyx.g:94:3: ( ( NEWLINE )* ( sentence | comment ) ( ( NEWLINE )+ ( sentence | comment ) )* ( NEWLINE )* EOF )
            dbg.enterAlt(1);

            // C:\\projects\\workspace\\onyx\\Onyx.g:94:5: ( NEWLINE )* ( sentence | comment ) ( ( NEWLINE )+ ( sentence | comment ) )* ( NEWLINE )* EOF
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(94,12);
            // C:\\projects\\workspace\\onyx\\Onyx.g:94:12: ( NEWLINE )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==NEWLINE) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\projects\\workspace\\onyx\\Onyx.g:94:12: NEWLINE
            	    {
            	    dbg.location(94,12);
            	    NEWLINE1=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_command629); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(94,15);
            // C:\\projects\\workspace\\onyx\\Onyx.g:94:15: ( sentence | comment )
            int alt2=2;
            try { dbg.enterSubRule(2);
            try { dbg.enterDecision(2, decisionCanBacktrack[2]);

            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=ACCEPT && LA2_0<=WAIT)||LA2_0==WS) ) {
                alt2=1;
            }
            else if ( (LA2_0==COMMENT) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\projects\\workspace\\onyx\\Onyx.g:94:16: sentence
                    {
                    dbg.location(94,16);
                    pushFollow(FOLLOW_sentence_in_command634);
                    sentence2=sentence();

                    state._fsp--;

                    adaptor.addChild(root_0, sentence2.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\projects\\workspace\\onyx\\Onyx.g:94:26: comment
                    {
                    dbg.location(94,33);
                    pushFollow(FOLLOW_comment_in_command637);
                    comment3=comment();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(2);}

            dbg.location(94,36);
            // C:\\projects\\workspace\\onyx\\Onyx.g:94:36: ( ( NEWLINE )+ ( sentence | comment ) )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                try {
                    isCyclicDecision = true;
                    alt5 = dfa5.predict(input);
                }
                catch (NoViableAltException nvae) {
                    dbg.recognitionException(nvae);
                    throw nvae;
                }
                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\projects\\workspace\\onyx\\Onyx.g:94:37: ( NEWLINE )+ ( sentence | comment )
            	    {
            	    dbg.location(94,44);
            	    // C:\\projects\\workspace\\onyx\\Onyx.g:94:44: ( NEWLINE )+
            	    int cnt3=0;
            	    try { dbg.enterSubRule(3);

            	    loop3:
            	    do {
            	        int alt3=2;
            	        try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            	        int LA3_0 = input.LA(1);

            	        if ( (LA3_0==NEWLINE) ) {
            	            alt3=1;
            	        }


            	        } finally {dbg.exitDecision(3);}

            	        switch (alt3) {
            	    	case 1 :
            	    	    dbg.enterAlt(1);

            	    	    // C:\\projects\\workspace\\onyx\\Onyx.g:94:44: NEWLINE
            	    	    {
            	    	    dbg.location(94,44);
            	    	    NEWLINE4=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_command642); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    if ( cnt3 >= 1 ) break loop3;
            	                EarlyExitException eee =
            	                    new EarlyExitException(3, input);
            	                dbg.recognitionException(eee);

            	                throw eee;
            	        }
            	        cnt3++;
            	    } while (true);
            	    } finally {dbg.exitSubRule(3);}

            	    dbg.location(94,47);
            	    // C:\\projects\\workspace\\onyx\\Onyx.g:94:47: ( sentence | comment )
            	    int alt4=2;
            	    try { dbg.enterSubRule(4);
            	    try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            	    int LA4_0 = input.LA(1);

            	    if ( ((LA4_0>=ACCEPT && LA4_0<=WAIT)||LA4_0==WS) ) {
            	        alt4=1;
            	    }
            	    else if ( (LA4_0==COMMENT) ) {
            	        alt4=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 4, 0, input);

            	        dbg.recognitionException(nvae);
            	        throw nvae;
            	    }
            	    } finally {dbg.exitDecision(4);}

            	    switch (alt4) {
            	        case 1 :
            	            dbg.enterAlt(1);

            	            // C:\\projects\\workspace\\onyx\\Onyx.g:94:48: sentence
            	            {
            	            dbg.location(94,48);
            	            pushFollow(FOLLOW_sentence_in_command647);
            	            sentence5=sentence();

            	            state._fsp--;

            	            adaptor.addChild(root_0, sentence5.getTree());

            	            }
            	            break;
            	        case 2 :
            	            dbg.enterAlt(2);

            	            // C:\\projects\\workspace\\onyx\\Onyx.g:94:57: comment
            	            {
            	            dbg.location(94,64);
            	            pushFollow(FOLLOW_comment_in_command649);
            	            comment6=comment();

            	            state._fsp--;


            	            }
            	            break;

            	    }
            	    } finally {dbg.exitSubRule(4);}


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}

            dbg.location(94,76);
            // C:\\projects\\workspace\\onyx\\Onyx.g:94:76: ( NEWLINE )*
            try { dbg.enterSubRule(6);

            loop6:
            do {
                int alt6=2;
                try { dbg.enterDecision(6, decisionCanBacktrack[6]);

                int LA6_0 = input.LA(1);

                if ( (LA6_0==NEWLINE) ) {
                    alt6=1;
                }


                } finally {dbg.exitDecision(6);}

                switch (alt6) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\projects\\workspace\\onyx\\Onyx.g:94:76: NEWLINE
            	    {
            	    dbg.location(94,76);
            	    NEWLINE7=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_command655); 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);
            } finally {dbg.exitSubRule(6);}

            dbg.location(94,82);
            EOF8=(Token)match(input,EOF,FOLLOW_EOF_in_command659); 
            dbg.location(95,3);

                System.out.println(input.toString(retval.start,input.LT(-1)));
              

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(98, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "command");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "command"

    public static class comment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "comment"
    // C:\\projects\\workspace\\onyx\\Onyx.g:100:1: comment : COMMENT (~ NEWLINE )* ;
    public final OnyxParser.comment_return comment() throws RecognitionException {
        OnyxParser.comment_return retval = new OnyxParser.comment_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token COMMENT9=null;
        Token set10=null;

        Object COMMENT9_tree=null;
        Object set10_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "comment");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(100, 1);

        try {
            // C:\\projects\\workspace\\onyx\\Onyx.g:101:3: ( COMMENT (~ NEWLINE )* )
            dbg.enterAlt(1);

            // C:\\projects\\workspace\\onyx\\Onyx.g:101:5: COMMENT (~ NEWLINE )*
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(101,5);
            COMMENT9=(Token)match(input,COMMENT,FOLLOW_COMMENT_in_comment680); 
            COMMENT9_tree = (Object)adaptor.create(COMMENT9);
            adaptor.addChild(root_0, COMMENT9_tree);

            dbg.location(101,13);
            // C:\\projects\\workspace\\onyx\\Onyx.g:101:13: (~ NEWLINE )*
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7, decisionCanBacktrack[7]);

                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=ACCEPT && LA7_0<=COMMENT)||(LA7_0>=WS && LA7_0<=69)) ) {
                    alt7=1;
                }


                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\projects\\workspace\\onyx\\Onyx.g:101:14: ~ NEWLINE
            	    {
            	    dbg.location(101,14);
            	    set10=(Token)input.LT(1);
            	    if ( (input.LA(1)>=ACCEPT && input.LA(1)<=COMMENT)||(input.LA(1)>=WS && input.LA(1)<=69) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (Object)adaptor.create(set10));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        dbg.recognitionException(mse);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);
            } finally {dbg.exitSubRule(7);}

            dbg.location(102,3);

                System.out.println("UNPARSED COMMENT: "+input.toString(retval.start,input.LT(-1)));
              

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(105, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "comment");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "comment"

    public static class sentence_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sentence"
    // C:\\projects\\workspace\\onyx\\Onyx.g:107:1: sentence : ( WS )? verb ( WS directObjectPhrase )? ( ( WS prepositionalPhrase ) | ( WS whereClause ) )* ( WS )? ;
    public final OnyxParser.sentence_return sentence() throws RecognitionException {
        OnyxParser.sentence_return retval = new OnyxParser.sentence_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token WS11=null;
        Token WS13=null;
        Token WS15=null;
        Token WS17=null;
        Token WS19=null;
        OnyxParser.verb_return verb12 = null;

        OnyxParser.directObjectPhrase_return directObjectPhrase14 = null;

        OnyxParser.prepositionalPhrase_return prepositionalPhrase16 = null;

        OnyxParser.whereClause_return whereClause18 = null;


        Object WS11_tree=null;
        Object WS13_tree=null;
        Object WS15_tree=null;
        Object WS17_tree=null;
        Object WS19_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "sentence");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(107, 1);

        try {
            // C:\\projects\\workspace\\onyx\\Onyx.g:108:1: ( ( WS )? verb ( WS directObjectPhrase )? ( ( WS prepositionalPhrase ) | ( WS whereClause ) )* ( WS )? )
            dbg.enterAlt(1);

            // C:\\projects\\workspace\\onyx\\Onyx.g:108:3: ( WS )? verb ( WS directObjectPhrase )? ( ( WS prepositionalPhrase ) | ( WS whereClause ) )* ( WS )?
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(108,5);
            // C:\\projects\\workspace\\onyx\\Onyx.g:108:5: ( WS )?
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8, decisionCanBacktrack[8]);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==WS) ) {
                alt8=1;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\projects\\workspace\\onyx\\Onyx.g:108:5: WS
                    {
                    dbg.location(108,5);
                    WS11=(Token)match(input,WS,FOLLOW_WS_in_sentence702); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}

            dbg.location(108,12);
            pushFollow(FOLLOW_verb_in_sentence706);
            verb12=verb();

            state._fsp--;

            root_0 = (Object)adaptor.becomeRoot(verb12.getTree(), root_0);
            dbg.location(108,14);
            // C:\\projects\\workspace\\onyx\\Onyx.g:108:14: ( WS directObjectPhrase )?
            int alt9=2;
            try { dbg.enterSubRule(9);
            try { dbg.enterDecision(9, decisionCanBacktrack[9]);

            int LA9_0 = input.LA(1);

            if ( (LA9_0==WS) ) {
                int LA9_1 = input.LA(2);

                if ( ((LA9_1>=CAS && LA9_1<=NEW)) ) {
                    alt9=1;
                }
            }
            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\projects\\workspace\\onyx\\Onyx.g:108:15: WS directObjectPhrase
                    {
                    dbg.location(108,17);
                    WS13=(Token)match(input,WS,FOLLOW_WS_in_sentence710); 
                    dbg.location(108,19);
                    pushFollow(FOLLOW_directObjectPhrase_in_sentence713);
                    directObjectPhrase14=directObjectPhrase();

                    state._fsp--;

                    adaptor.addChild(root_0, directObjectPhrase14.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(9);}

            dbg.location(108,40);
            // C:\\projects\\workspace\\onyx\\Onyx.g:108:40: ( ( WS prepositionalPhrase ) | ( WS whereClause ) )*
            try { dbg.enterSubRule(10);

            loop10:
            do {
                int alt10=3;
                try { dbg.enterDecision(10, decisionCanBacktrack[10]);

                int LA10_0 = input.LA(1);

                if ( (LA10_0==WS) ) {
                    int LA10_1 = input.LA(2);

                    if ( ((LA10_1>=BY && LA10_1<=TO)) ) {
                        alt10=1;
                    }
                    else if ( (LA10_1==WHERE) ) {
                        alt10=2;
                    }


                }


                } finally {dbg.exitDecision(10);}

                switch (alt10) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\projects\\workspace\\onyx\\Onyx.g:108:41: ( WS prepositionalPhrase )
            	    {
            	    dbg.location(108,41);
            	    // C:\\projects\\workspace\\onyx\\Onyx.g:108:41: ( WS prepositionalPhrase )
            	    dbg.enterAlt(1);

            	    // C:\\projects\\workspace\\onyx\\Onyx.g:108:42: WS prepositionalPhrase
            	    {
            	    dbg.location(108,44);
            	    WS15=(Token)match(input,WS,FOLLOW_WS_in_sentence719); 
            	    dbg.location(108,46);
            	    pushFollow(FOLLOW_prepositionalPhrase_in_sentence722);
            	    prepositionalPhrase16=prepositionalPhrase();

            	    state._fsp--;

            	    adaptor.addChild(root_0, prepositionalPhrase16.getTree());

            	    }


            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // C:\\projects\\workspace\\onyx\\Onyx.g:108:67: ( WS whereClause )
            	    {
            	    dbg.location(108,67);
            	    // C:\\projects\\workspace\\onyx\\Onyx.g:108:67: ( WS whereClause )
            	    dbg.enterAlt(1);

            	    // C:\\projects\\workspace\\onyx\\Onyx.g:108:68: WS whereClause
            	    {
            	    dbg.location(108,70);
            	    WS17=(Token)match(input,WS,FOLLOW_WS_in_sentence726); 
            	    dbg.location(108,72);
            	    pushFollow(FOLLOW_whereClause_in_sentence729);
            	    whereClause18=whereClause();

            	    state._fsp--;

            	    adaptor.addChild(root_0, whereClause18.getTree());

            	    }


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);
            } finally {dbg.exitSubRule(10);}

            dbg.location(108,89);
            // C:\\projects\\workspace\\onyx\\Onyx.g:108:89: ( WS )?
            int alt11=2;
            try { dbg.enterSubRule(11);
            try { dbg.enterDecision(11, decisionCanBacktrack[11]);

            int LA11_0 = input.LA(1);

            if ( (LA11_0==WS) ) {
                alt11=1;
            }
            } finally {dbg.exitDecision(11);}

            switch (alt11) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\projects\\workspace\\onyx\\Onyx.g:108:89: WS
                    {
                    dbg.location(108,89);
                    WS19=(Token)match(input,WS,FOLLOW_WS_in_sentence734); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(11);}

            dbg.location(109,1);

            System.out.println(input.toString(retval.start,input.LT(-1)));


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(112, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "sentence");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "sentence"

    public static class directObjectPhrase_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "directObjectPhrase"
    // C:\\projects\\workspace\\onyx\\Onyx.g:114:1: directObjectPhrase : nounPhrase ;
    public final OnyxParser.directObjectPhrase_return directObjectPhrase() throws RecognitionException {
        OnyxParser.directObjectPhrase_return retval = new OnyxParser.directObjectPhrase_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        OnyxParser.nounPhrase_return nounPhrase20 = null;



        try { dbg.enterRule(getGrammarFileName(), "directObjectPhrase");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(114, 1);

        try {
            // C:\\projects\\workspace\\onyx\\Onyx.g:115:1: ( nounPhrase )
            dbg.enterAlt(1);

            // C:\\projects\\workspace\\onyx\\Onyx.g:115:3: nounPhrase
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(115,3);
            pushFollow(FOLLOW_nounPhrase_in_directObjectPhrase749);
            nounPhrase20=nounPhrase();

            state._fsp--;

            adaptor.addChild(root_0, nounPhrase20.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
